--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "ts-node": "^10.9.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
@@ -20,6 +21,7 @@
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "prettier": "^3.0.3",
+    "tailwindcss": "^3.3.6",
     "vite": "^4.4.9"
   }
 }
